--- a/index.html
+++ b/index.html
@@ -28,6 +28,341 @@
     <h2 class="shout">СЕО и оптимизация</h2>
   </section>
 
+  <!-- TODO SEM -->
+  <section class="slide">
+    <h2>SEM</h2>
+    <p><b>SEM</b> (Search Engine Marketing) — поисковый маркетинг, вкючает в себя:</p>
+    <ul>
+      <li><b>SEO</b> — продвижение сайта в Интернете посредством его оптимизации</li>
+      <li><b>SEA</b> — использование контекстной рекламы</li>
+      <li><b>SMM</b> — применение социальных медиасервисов</li>
+      <li><b>SMO</b> — оптимизация страниц сайта под социальные сети</li>
+    </ul>
+  </section>
+
+  <!-- TODO SEO -->
+  <section class="slide">
+    <h2>SEO</h2>
+    <p><b>SEO</b> (<mark>search engine</mark> optimization) — это оптимизация сайта под поисковики, которая помогает вывести его на первые позиции при поиске</p>
+  </section>
+
+  <section class="slide">
+    <h2>Контекстная реклама</h2>
+    <p><b>Контекстная реклама</b> — это настройка рекламных объявлений, занимающих определенное место в поисковой выдаче</p>
+  </section>
+
+  <section class="slide">
+    <h2>Продвижение в социальных сетях</h2>
+    <p><b>SMM</b> — это продвижение в социальных сетях с целью увеличения числа подписчиков и повышения трафика на сайт</p>
+  </section>
+
+  <section class="slide">
+    <h2>Таргетированная реклама</h2>
+    <p><b>Таргетированная реклама</b> — это показ рекламных объявлений, нацеленный на определенную аудиторию</p>
+  </section>
+
+  <section class="slide">
+    <h2>Реклама в группах и в сообществах</h2>
+    <p>Создание постов с рекламным содержимым</p>
+  </section>
+
+  <section class="slide">
+    <h2>Работа с блогерами</h2>
+    <p>Привлечение блогеров для рекламы в тематических пабликах и сообществах</p>
+  </section>
+
+  <section class="slide">
+    <h2>Медийная реклама</h2>
+    <p>Используются:</p>
+    <ul>
+      <li>видеоролики</li>
+      <li>картинки и фотографии</li>
+      <li>звук</li>
+      <li>брендирование</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Реклама на внешних ресурсах</h2>
+    <p>Предполагает публикации на различных тематических площадках, информационных и новостных ресурсах, на страницах СМИ и т.д</p>
+  </section>
+
+  <section class="slide">
+    <h2>E-mail маркетинг</h2>
+    <p>Рассылка электронных писем по базе подписчиков с информацией о различных акция, новинках</p>
+  </section>
+
+  <!-- TODO Оценка результатов SEO -->
+  <section class="slide">
+    <h2>Оценка результатов SEO</h2>
+    <ol>
+      <li><b>небрендовый трафик</b></li>
+      <li><b>лиды с SEO</b></li>
+      <li><b>продажи с «SEO»</b></li>
+      <li>процент конверсии</li>
+      <li>цена лида</li>
+      <li>процент фраз в Топ-10</li>
+      <li>поведенческие факторы</li>
+    </ol>
+  </section>
+
+  <!-- TODO Поисковые системы -->
+  <section class="slide">
+    <h2>Поисковые системы</h2>
+    <ul>
+      <li><b>1994</b>: Yahoo!</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Поисковые системы</h2>
+    <ul>
+      <li><b>1994</b>: Yahoo!</li>
+      <li><b>1994</b>: WebCrawler</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Поисковые системы</h2>
+    <ul>
+      <li><b>1994</b>: Yahoo!</li>
+      <li><b>1994</b>: WebCrawler</li>
+      <li><b>1995</b>: Lycos и AltaVista</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Поисковые системы</h2>
+    <ul>
+      <li><b>1994</b>: Yahoo!</li>
+      <li><b>1994</b>: WebCrawler</li>
+      <li><b>1995</b>: Lycos и AltaVista</li>
+      <li><b>1997</b>: Google</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Поисковые системы</h2>
+    <ul>
+      <li><b>1994</b>: Yahoo!</li>
+      <li><b>1994</b>: WebCrawler</li>
+      <li><b>1995</b>: Lycos и AltaVista</li>
+      <li><b>1997</b>: Google</li>
+      <li><b>1997</b>: Яндекс</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Поисковые системы</h2>
+    <p>Поисковые системы в зависимости от качества контента ранжируют сайты, что влияет на их место в поисковой выдаче</p>
+  </section>
+
+  <section class="slide">
+    <h2>Архитектура поиска</h2>
+    <ol>
+      <li><b>базовый поиск</b> — программа, которая ищет в рамках своей части индекса и выдает пользователю все ссылки, отвечающие поисковому запросу</li>
+      <li><b>метапоиск</b> — программа, которая при обработке запроса определяет местонахождение пользователя и выдает готовую поисковую выдачу, если ключевое слово популярное, если же подобных запросов раньше не было, то в работу подключается базовый поиск, который методом машинного обучения обрабатывает имеющиеся в базе ссылки и выдает их список пользователю</li>
+    </ol>
+  </section>
+
+  <section class="slide">
+    <h2>Критерии поискового запроса</h2>
+    <ul>
+      <li>длина</li>
+      <li>четкость</li>
+      <li>популярность</li>
+      <li>конкурентность</li>
+      <li>синтаксис</li>
+      <li>география</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Типы поискового запроса</h2>
+    <ul>
+      <li>общий</li>
+      <li>навигационный</li>
+      <li>мультимедийный</li>
+      <li>информационный</li>
+      <li>геозависимые</li>
+    </ul>
+  </section>
+
+  <!-- TODO Устройство поисковой выдачи -->
+  <section class="slide">
+    <h2>Устройство поисковой выдачи</h2>
+    <ol>
+      <li>Web crawler (обходчик)</li>
+      <li>индекс</li>
+      <li>поисковая система (сервер)</li>
+    </ol>
+  </section>
+
+  <!-- TODO Поисковая система -->
+  <section class="slide">
+    <h2>Поисковая система</h2>
+    <p><b>Поисковая система</b> — специальная программа, с помощью которой пользователи могут быстро и легко искать необходимую информацию в Сети</p>
+  </section>
+
+  <!-- TODO Критерии ранжирования -->
+  <section class="slide">
+    <h2>Критерии ранжирования</h2>
+    <ol>
+      <li>текстовые критерии поисковой системы</li>
+      <li>нетекстовые критерии поисковой системы</li>
+    </ol>
+  </section>
+
+  <!-- TODO Инструменты SEO-специалиста -->
+  <section class="slide">
+    <h2>Инструменты SEO-специалиста</h2>
+    <ol>
+      <li><a href="https://semantica.in/tools/yandex-wordstat-assistant" target="_blank">Yandex Wordstat Assistant</a></li>
+      <li><a href="https://www.bukvarix.com/" target="_blank">Букварикс</a></li>
+      <li><a href="https://keywordtool.io/ru" target="_blank">Keyword Tool</a></li>
+      <li><a href="https://coolakov.ru/tools/razbivka/" target="_blank">Группировка запросов</a></li>
+      <li><a href="https://just-magic.org/" target="_blank">JustMagic</a></li>
+      <li><a href="https://home.snafu.de/tilman/xenulink.html" target="_blank">Xenu</a></li>
+      <li><a href="https://www.similarweb.com/" target="_blank">Similarweb</a></li>
+      <li><a href="https://be1.ru/position-yandex-google/" target="_blank">Проверка позиций сайта</a></li>
+    </ol>
+  </section>
+
+  <section class="slide">
+    <h2>Инструменты SEO-специалиста</h2>
+    <ol>
+      <li><a href="https://metrika.yandex.ru/" target="_blank">Яндекс.Метрика</a></li>
+      <li><a href="https://webmaster.yandex.ru/welcome/" target="_blank">Яндекс.Вебмастер</a></li>
+    </ol>
+  </section>
+
+  <!-- TODO Семантическое ядро -->
+  <section class="slide">
+    <h2>Семантическое ядро</h2>
+    <p><b>Семантическое ядро</b> сайта (семантика) — это список ключевых слов и словосочетаний, приводящих на сайт целевых посетителей, используются для продвижения сайта в поисковых системах</p>
+  </section>
+
+  <section class="slide">
+    <h2>Семантическое ядро</h2>
+    <ul>
+      <li>проработка структуры сайта</li>
+      <li>продвижение страниц в топ поиска</li>
+      <li>составление контент-плана</li>
+      <li>создание перелинковки на сайте</li>
+      <li>настройка контекстной рекламы</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Семантическое ядро</h2>
+    <p>Ключевые фразы: </p>
+    <ul>
+      <li><b>высокочастотные</b> - от 10 000 показов в мес.</li>
+      <li><b>среднечастотные</b> - 500–10 000 показов в мес.</li>
+      <li><b>низкочастотные</b> - до 500 показов в мес.</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Формирование семантического ядра</h2>
+    <ol>
+      <li>анализ сайтов конкурентов</li>
+      <li>сбор ключевых фраз</li>
+      <li>сбор семантического ядра</li>
+      <li>расширение семантического ядра</li>
+      <li>удаление мусорных и нецелеввых запросов из семантического ядра</li>
+    </ol>
+  </section>
+
+  <!-- TODO Санкции для сайта от Яндексе и Google -->
+  <section class="slide">
+    <h2>Санкции для сайта от Яндексе и Google</h2>
+    <ul>
+      <li>переоптимизированный контент</li>
+      <li>накрутка поведенческих факторов</li>
+      <li>агрессивное наращивание внешней ссылочной массы</li>
+      <li>неуникальные тексты на сайте</li>
+      <li>продажа ссылок</li>
+      <li>большое количество рекламы, тизеров и баннеров</li>
+      <li>аффилированность сайтов</li>
+    </ul>
+  </section>
+
+  <!-- TODO СЕО и CMS -->
+  <section class="slide">
+    <h2>СЕО и CMS</h2>
+    <p><b>CMS</b> (Content Management System) — это система, с помощью которой происходит управление контентом сайта в Интернете</p>
+  </section>
+
+  <!-- TODO Нейросети в SEO -->
+  <section class="slide">
+    <h2>Нейросети в SEO</h2>
+    <p>Без VPN и абонентской платы  возможности нейросетей можно попробовать на <b>BotHub</b></p>
+    <ol>
+      <li><b>оптимизация скорости загрузки</b>: GTmetrix, Google PageSpeed Insights</li>
+      <li><b>UX</b>: Hotjar, Crazyegg</li>
+      <li><b>линкбилдинг</b>: Majestic, Ahrefs, SEMrush</li>
+      <li><b>анализ данных</b>: DataForSEO, SERPstat</li>
+      <li><b>персонализация и повышение конверсий</b>: Personyze</li>
+    </ol>
+  </section>
+
+  <!-- TODO SEO-аудит сайтов  -->
+  <section class="slide">
+    <h2>SEO-аудит сайтов</h2>
+    <p><mark>Яндекс.Вебмастер и Google Search Console</mark></p>
+    <ol style="font-size: 20px;">
+      <li>выявления ошибок индексации</li>
+      <li>размещения внешних ссылок сайта</li>
+      <li>проведения микроразметки</li>
+      <li>проверки файла robots.txt</li>
+      <li>добавления файла sitemap</li>
+      <li>управления видом сниппета</li>
+      <li>получения ответа сервера при открытии отдельных веб-страниц</li>
+      <li>определения ИКС (коэффициента качества)</li>
+    </ol>
+  </section>
+
+  <section class="slide">
+    <h2>SEO-аудит сайтов</h2>
+    <p>Другие инструменты</p>
+    <ol style="font-size: 20px;">
+      <li>Megaindex</li>
+      <li>Pr-cy.ru</li>
+      <li>Be1.ru</li>
+      <li>Seobility SEO Checker</li>
+    </ol>
+  </section>
+
+  <!-- TODO Техническая оптимизация сайта -->
+  <section class="slide">
+    <h2>Техническая оптимизация сайта</h2>
+    <p><b>Техническая оптимизация сайта</b> — это комплекс мер, которые направлены на корректировку технических аспектов ресурса с целью улучшения его взаимодействия с роботами поисковых систем</p>
+    <ol style="font-size: 20px;">
+      <li>файл robots.txt</li>
+      <li>sitemap — карта сайта</li>
+      <li>редиректы (перенаправления)</li>
+      <li>настройка видов URL-страницы</li>
+      <li>ошибки сайта</li>
+    </ol>
+  </section>
+
+  <section class="slide">
+    <h2>URL-страницы</h2>
+    <p>На что обращать внимание при формировании URL страницы:</p>
+    <ol style="font-size: 20px;">
+      <li>ключевые слова</li>
+      <li>длина ссылки</li>
+      <li>строчные буквы</li>
+      <li>дефисы</li>
+      <li>даты и заголовки статей</li>
+      <li>навигация</li>
+      <li>HTTPS-протокол</li>
+    </ol>
+  </section>
+
+
+
 
   <!-- TODO Отправка -->
   <section class="slide">
