--- a/index.html
+++ b/index.html
@@ -361,6 +361,401 @@
     </ol>
   </section>
 
+  <!-- TODO Этапы создания сайта -->
+  <section class="slide">
+    <h2>Этапы создания сайта</h2>
+    <p>А что, если сразу сделать сайт правильно?</p>
+  </section>
+
+  <section class="slide">
+    <h2>Этапы создания сайта</h2>
+    <div class="columns two">
+      <ul>
+        <li>анализ ЦА и конкурентов</li>
+        <li>постановка целей и задач</li>
+        <li>разработка технического задания</li>
+        <li>проектирование и прототипирование</li>
+        <li>проработка макетов дизайна</li>
+        <li>верстка и интеграция с CMS</li>
+      </ul>
+      <ul>
+        <li>настройка основных модулей</li>
+        <li>интеграция с учетными системами и сервисами</li>
+        <li>наполнение контентом и SEO</li>
+        <li>релиз и тестирование</li>
+        <li>поддержка и сопровождение</li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="slide">
+    <h2>Этапы создания сайта</h2>
+    <ol>
+      <li>проектирование и прототипирование</li>
+      <li>проработка макетов дизайна</li>
+      <li>верстка и интеграция с CMS</li>
+    </ol>
+  </section>
+
+  <!-- TODO usability -->
+  <section class="slide">
+    <h2>Usability</h2>
+    <figure>
+      <blockquote>
+        <p><mark><b>Юзабилити</b></mark> — степень, с которой продукт может быть использован <b>определёнными</b> пользователями при <b>определённом</b> контексте использования для достижения <b>определённых</b> целей с должной эффективностью, продуктивностью и удовлетворённостью</p>
+      </blockquote>
+      <figcaption>ISO 9241–11</figcaption>
+    </figure>
+  </section>
+
+  <section class="slide">
+    <h2>Usability</h2>
+    <figure>
+      <blockquote>
+        <p><mark><b>Юзабилити</b></mark> — это подход к разработке и оценке интерфейсов, который предполагает обязательное вовлечение в процесс потенциальных пользователей продукта</p>
+      </blockquote>
+      <figcaption>Human Centered Design ISO 9241–10</figcaption>
+    </figure>
+  </section>
+
+  <section class="slide">
+    <h2>UI и UX</h2>
+    <p><b>UI-дизайн</b> (User Interface — «пользовательский интерфейс») отвечает за то, как интерфейс выглядит</p>
+    <p><b>UX-дизайн</b> (User Experience — «пользовательский опыт») отвечает за то, как интерфейс работает</p>
+  </section>
+
+  <section class="slide">
+    <h2>UX/UI-дизайнер</h2>
+    <p>Ведёт весь процесс разработки интерфейса от этапа получения задачи до тестирования прототипа:</p>
+    <ol>
+      <li>исследование</li>
+      <li>проектирование</li>
+      <li>визуальный дизайн</li>
+      <li>проверка решения</li>
+    </ol>
+  </section>
+
+  <!-- TODO Design Thinking -->
+  <section class="slide">
+    <h2>Design Thinking</h2>
+    <p><b>Дизайн-мышление</b> — это метод, с помощью которого можно найти способы решения неочевидных, но важных для людей проблем</p>
+    <p>Герберт Саймон &laquo;Наука об&nbsp;искусственном&raquo; (1969г.)</p>
+  </section>
+
+  <section class="slide">
+    <h2>Этапы применения дизайн-мышления</h2>
+    <ol>
+      <li>эмпатия</li>
+      <li>анализ и определение проблемы</li>
+      <li>генерация идей</li>
+      <li>прототипирование</li>
+      <li>тест</li>
+    </ol>
+  </section>
+
+  <!-- TODO Психология дизайна -->
+  <section class="slide">
+    <h2>Психология дизайна</h2>
+    <p><b>Психология дизайна</b> — это изучение и использование особенностей поведения людей для создания более эффективного опыта</p>
+  </section>
+
+  <!-- TODO Когнитивные предубеждения -->
+  <section class="slide">
+    <h2>Когнитивные предубеждения</h2>
+    <p><b>Когнитивные предубеждения</b> — это бессознательные ошибки, которые мозг допускает при обработке информации, что приводит к неправильной интерпретации окружающих нас объектов</p>
+  </section>
+
+  <section class="slide">
+    <h2>Когнитивные предубеждения</h2>
+    <ol>
+      <li>эффект якоря</li>
+      <li>эффект владения</li>
+      <li>эффект толпы</li>
+      <li>эффект фрейминга</li>
+      <li>предвзятость подтверждения</li>
+      <li>...</li>
+    </ol>
+  </section>
+
+  <section class="slide">
+    <h2>Эффект якоря или привязки</h2>
+    <p>Возникает, когда при принятии решения вы полагаетесь на первую попавшуюся информацию</p>
+    <p><b>Как исправить:</b></p>
+    <ul>
+      <li>значение по умолчанию</li>
+      <li>трехуровневое предложение</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Эффект владения (обладания)</h2>
+    <p>Эмоциональное искажение, из-за которого люди склонны придавать большее значение тому, чем они владеют или тому, что они создали</p>
+    <p><b>Как исправить:</b></p>
+    <ul>
+      <li>эффект IKEA</li>
+      <li>индикатор прогресса </li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Эффект толпы (эффект присоединения к большинству)</h2>
+    <p>Склонность делать что-то, потому что это делают другие люди, независимо от собственных убеждений</p>
+    <p>Самый простой способ применения эффекта толпы — социальные доказательства (оценки, отзывы, комментарии)</p>
+  </section>
+
+  <section class="slide">
+    <h2>Эффект фрейминга</h2>
+    <p>Возникает, когда человек принимает решение, опираясь на способ подачи информации и не обращая внимания на факты</p>
+    <p><b>Как исправить:</b></p>
+    <ul>
+      <li>визуальный фрейминг</li>
+      <li>позитивный и негативный фрейминг</li>
+      <li>ценностный фрейминг</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Предвзятость подтверждения</h2>
+    <p>Люди видят то, что хотят видеть</p>
+    <p><b>Как исправить:</b> проводить исследования и быть открытым для новой информации и отзывов, в том числе негативных</p>
+  </section>
+
+  <section class="slide">
+    <h2>Когнитивные искажения</h2>
+    <blockquote>
+      Иногда мы способны принимать осознанные решения
+    </blockquote>
+  </section>
+
+  <section class="slide">
+    <h2>Парадокс выбора: закон Хика</h2>
+    <p>Чем больше опций нам доступно, тем более нерешительными и перегруженными мы себя чувствуем</p>
+  </section>
+
+  <section class="slide">
+    <h2>Закон Миллера (правило 7±2)</h2>
+    <p>Кратковременная память имеет ограниченную емкость — 7 элементов, и запомнить их мы можем только на определенный период времени</p>
+    <cite>"Магическое число семь, плюс или минус два: о некоторых пределах нашей способности обрабатывать информацию". Джордж А. Миллер 1956г.</cite>
+  </section>
+
+  <section class="slide">
+    <h2>Закон Якоба</h2>
+    <p>Люди склонны искать закономерности повсюду, поскольку последние помогают нашему мозгу работать лучше, быстрее и без усилий</p>
+    <p><b>patternicity</b> — поиск значимых закономерностей в бессмысленном шуме (Майкл Шермер, американский историк и популяризатор науки)</p>
+  </section>
+
+  <section class="slide">
+    <h2>Принцип наименьших усилий</h2>
+    <p>Мы хотим достигнуть результата, приложив минимум усилий </p>
+  </section>
+
+  <!-- TODO Сенсорный дизайн -->
+  <section class="slide">
+    <h2>Сенсорный дизайн</h2>
+    <p><b>Сенсорный дизайн</b> — это дизайн, который воздействует на несколько органов чувств</p>
+    <ul>
+      <li>зрение</li>
+      <li>осязание</li>
+      <li>слух</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Сенсорный дизайн: зрение</h2>
+    <p>Каждый дизайнер, рано или поздно, столкнется с задачей по адаптации продукта для пользователей имеющих проблемы со зрением</p>
+  </section>
+
+  <section class="slide">
+    <h2>Сенсорный дизайн: осязание</h2>
+    <ul>
+      <li><b>tap</b>: касание</li>
+      <li><b>double-tap</b>: двойное касание</li>
+      <li><b>swipe</b>: свайп</li>
+      <li><b>scrolling</b>: прокрутка</li>
+      <li><b>click</b>: &laquo;десктопная версия&raquo; касания</li>
+      <li>набор текста на клавиатуре</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Сенсорный дизайн: слух</h2>
+    <ul>
+      <li>звуковые иконки (earcons)</li>
+      <li>декоративные звуки</li>
+      <li>фирменные звуки (hero sounds)</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>A11y (accessibility)</h2>
+    <p><b>Доступность </b> —  это концепция создания веб-контента, адаптированного под людей с ограниченными возможностями</p>
+    <ul>
+      <li>контраст</li>
+      <li>элементы интерфейса</li>
+      <li>поля ввода</li>
+      <li>элементы меню</li>
+    </ul>
+  </section>
+
+  <!-- TODO Дизайн для мобильных -->
+  <section class="slide">
+    <h2>Дизайн для мобильных</h2>
+    <p>Мобильные устройства имеют ряд ограничений, а значит помним про:</p>
+    <ol>
+      <li>адаптивность</li>
+      <li>большие размеры</li>
+      <li>крупная типографика</li>
+      <li>одна колонка</li>
+      <li>попапы и виджеты</li>
+      <li>формы</li>
+    </ol>
+  </section>
+
+  <!-- TODO VUI -->
+  <section class="slide">
+    <h2>VUI</h2>
+    <p><b>VUI</b> — голосовые пользовательские интерфейсы</p>
+  </section>
+
+  <!-- TODO Юзабилити-аудит -->
+  <section class="slide">
+    <h2>Юзабилити-аудит</h2>
+    <p><b>Юзабилити-аудит</b> — проверка сайта на удобство работы с ним</p>
+    <p style="margin-bottom: 0;"><b>Эвристики Нильсена:</b></p>
+    <div class="columns two">
+      <ul style="font-size: 20px;">
+        <li>видимость состояния сайта</li>
+        <li>схожесть между сайтом и реальным миром</li>
+        <li>свобода действий</li>
+        <li>последовательность и стандартизация</li>
+        <li>предотвращение ошибок</li>
+      </ul>
+      <ul style="font-size: 20px;">
+        <li>на виду, а не в памяти</li>
+        <li>гибкость и эффективность использования</li>
+        <li>эстетика и минимализм</li>
+        <li>помощь пользователям в распознавании ошибок</li>
+        <li>помощь и документация</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- TODO Чек-лист проверки качества верстки -->
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p>Весь спискок можно посмотреть на <a href="https://disk.yandex.ru/d/J_J4Q6XTWwH82A" target="_blank">Яндекс диске</a></p>
+  </section>
+
+  <!-- TODO Чек-лист проверки качества верстки -->
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>1. Нет горизонтального и вертикального скролла там, где он не предусмотрен по макету</mark></p>
+    <p><b>Что проверять:</b> CSS</p>
+    <p><b>Чем/где проверять:</b> Инструменты разработчика -> Вкладка <b>Elements</b></p>
+    <p><b>Как улучшить:</b> настроить переполнение, скрыть контент, выпадающий за границы блока</p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>2. Футер "прибит" к низу HTML-страницы независимо от высоты страницы</b></mark></p>
+    <p><b>Что проверять:</b> CSS</p>
+    <p><b>Чем/где проверять:</b> инструменты разработчика -> Вкладка <b>Elements</b></p>
+    <p><b>Как улучшить:</b> добавить CSS правила</p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>3. Подключены правильные шрифты. Их параметры совпадают заданным в макетах</mark></p>
+    <p><b>Что проверять:</b> шрифты</p>
+    <p><b>Чем/где проверять:</b> макет, инструменты разработчика -> Вкладка <b>Elements</b>, расширение <b>What Font</b></p>
+    <p><b>Как улучшить:</b> подключить корректные шрифты</p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>4. Все тексты прогнаны через сервис <b>Типограф</b></mark></p>
+    <p><b>Что проверять:</b> текстовый контент</p>
+    <p><b>Чем/где проверять:</b> <a href="https://www.artlebedev.ru/typograf/" target="_blank">Типограф</a></p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>5. Все интерактивные элементы имеют явный <b>ховер эффект</b> и <b>cursor: pointer</b></mark></p>
+    <p><b>Что проверять:</b> интерактивные элементы</p>
+    <p><b>Чем/где проверять:</b> инструменты разработчика -> Вкладка <b>Elements</b> -> <b>Styles</b> -> <b>:hov</b></p>
+    <p><b>Как улучшить:</b> добавить CSS правила</p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>6. У изображений присутствует атрибут alt</mark></p>
+    <p><b>Что проверять:</b> изображения в HTML-верстке</p>
+    <p><b>Чем/где проверять:</b> инструменты разработчика -> Вкладка <b>Elements</b></p>
+    <p><b>Как улучшить:</b> добавить атрибут <b>alt</b></p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>7.	В интерактивных элементах есть текст</mark></p>
+    <p><b>Что проверять:</b> интерактивные элементы</p>
+    <p><b>Чем/где проверять:</b> инструменты разработчика -> Вкладка <b>Accessibility</b>/ Lighthouse</p>
+    <p><b>Как улучшить:</b> добавить отображаемый текст/атрибут <b>aria-label</b>/текст доступно скрыт с помощью .visually-hidden</b></b></p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>8. Верная иерархия заголовков</mark></p>
+    <p><b>Что проверять:</b> иерархию заголовков</p>
+    <p><b>Чем/где проверять:</b> <a href="http://yoksel.github.io/html-tree/" target="_blank">yoksel.github.io</a></p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>9. Разметка проходит тест на валидацию</mark></p>
+    <p><b>Что проверять:</b> HTML-верстку</p>
+    <p><b>Чем/где проверять:</b> <a href="https://validator.w3.org/nu" target="_blank">validator.w3.org</a></p></p>
+    <p><b>Как улучшить:</b> исправить ошибки валидатора</p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>10. Отсутствует транслит в названиях классов, атрибутах</mark></p>
+    <p><b>Что проверять:</b> HTML-верстку</p>
+    <p><b>Чем/где проверять:</b> инструменты разработчика -> Вкладка <b>Elements</b></p>
+    <p><b>Как улучшить:</b> исправить названия</p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>11. Все картинки имеют размер и фоновый цвет</mark></p>
+    <p><b>Что проверять:</b> CSS-стили, HTML-верстку</p>
+    <p><b>Чем/где проверять:</b> файл с CSS, файл с HTML</p>
+    <p><b>Как улучшить:</b> добавить размеры и фоновый цвет</p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p>12. Семантика использована уместно и в полном объёме</p>
+    <p><b>Что проверять:</b> HTML-верстку</p>
+    <p><b>Чем/где проверять:</b> файл с HTML, инструменты разработчика -> Вкладка <b>Elements</b></p>
+    <p><b>Как улучшить:</b> добавить семантические теги</p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>13. Доступность и SEO больше 90% в <b>Lighthouse</b></mark></p>
+    <p><b>Что проверять:</b> доступность и SEO</p>
+    <p><b>Чем/где проверять:</b> инструменты разработчика -> <b>Lighthouse</b></p>
+    <p><b>Как улучшить:</b> исправить ошибки и предупреждения в <b>Lighthouse</b></p>
+  </section>
+
+  <section class="slide">
+    <h2>Чек-лист проверки качества верстки</h2>
+    <p><mark>14. Скорость загрузки больше 90% в <b>Lighthouse</b></mark></p>
+    <p><b>Что проверять:</b> скорость загрузки</p>
+    <p><b>Чем/где проверять:</b> инструменты разработчика -> <b>Lighthouse</b></p>
+    <p><b>Как улучшить:</b> исправить ошибки и предупреждения в <b>Lighthouse</b></p>
+  </section>
 
 
 
