--- a/index.html
+++ b/index.html
@@ -757,23 +757,130 @@
     <p><b>Как улучшить:</b> исправить ошибки и предупреждения в <b>Lighthouse</b></p>
   </section>
 
-
-
-  <!-- TODO Отправка -->
-  <section class="slide">
-    <h2>Отправка</h2>
-  </section>
-
   <section class="slide clear">
     <h2 class="shout">Практика</h2>
   </section>
 
   <!-- TODO Материалы и ссылки -->
   <section class="slide">
-    <h2>Материалы и ссылки ч.1/1</h2>
+    <h2>Материалы и ссылки ч.1/5</h2>
     <ol>
       <li>
-        <a href="https://learn.javascript.ru/intro/" target="_blank">Основы JavaScript</a>
+        <a href="https://kokoc.com/blog/metody-seo-prodvizheniya/" target="_blank">Способы и методы раскрутки сайта</a>
+      </li>
+      <li>
+        <a href="https://iq-adv.ru/blog/kak-otsenit-effektivnost-seo-prodvizheniya/" target="_blank">Как оценить эффективность SEO</a>
+      </li>
+      <li>
+        <a href="https://sales-generator.ru/blog/printsip-raboty-poiskovykh-sistem/" target="_blank">Принцип работы поисковых систем</a>
+      </li>
+      <li>
+        <a href="https://semantica.in/tools/yandex-wordstat-assistant" target="_blank">Yandex Wordstat Assistant</a>
+      </li>
+      <li>
+        <a href="https://www.bukvarix.com/" target="_blank">Букварикс</a>
+      </li>
+      <li>
+        <a href="https://keywordtool.io/ru" target="_blank">Keyword Tool</a>
+      </li>
+      <li>
+        <a href="https://coolakov.ru/tools/razbivka/" target="_blank">Группировка запросов</a>
+      </li>
+    </ol>
+  </section>
+
+  <section class="slide">
+    <h2>Материалы и ссылки ч.2/5</h2>
+    <ol>
+      <li>
+        <a href="https://just-magic.org/" target="_blank">JustMagic</a>
+      </li>
+      <li>
+        <a href="https://home.snafu.de/tilman/xenulink.html" target="_blank">Xenu</a>
+      </li>
+      <li>
+        <a href="https://www.similarweb.com/" target="_blank">Similarweb</a>
+      </li>
+      <li>
+        <a href="https://be1.ru/position-yandex-google/" target="_blank">Проверка позиций сайта</a>
+      </li>
+      <li>
+        <a href="https://webmaster.yandex.ru/welcome/" target="_blank">Яндекс.Вебмастер</a>
+      </li>
+      <li>
+        <a href="https://metrika.yandex.ru/list" target="_blank">Яндекс.Метрика</a>
+      </li>
+      <li>
+        <a href="https://kokoc.com/blog/chto-takoe-semanticheskoe-yadro-i-kak-ego-sostavit/" target="_blank">Что такое семантическое ядро и как его составить</a>
+      </li>
+    </ol>
+  </section>
+
+  <section class="slide">
+    <h2>Материалы и ссылки ч.3/5</h2>
+    <ol>
+      <li>
+        <a href="https://gusarov-group.by/kakie-byvayut-poiskovye-zaprosy/" target="_blank">Какие бывают поисковые запросы</a>
+      </li>
+      <li>
+        <a href="https://www.cool-reklama.ru/faq/kakie-sanktsii-k-saytam-sushchestvuyut-u-poiskovykh-sistem/" target="_blank">Какие санкции к сайтам существуют у поисковых систем</a>
+      </li>
+      <li>
+        <a href="https://habr.com/ru/companies/bothub/articles/809093/" target="_blank">Использование нейросетей в SEO</a>
+      </li>
+      <li>
+        <a href="https://www.ihc.ru/articles/seo-audit-sajta-11-besplatnykh-servisov.html" target="_blank">SEO-аудит сайта</a>
+      </li>
+      <li>
+        <a href="https://skillbox.ru/media/marketing/seo-audit/" target="_blank">SEO-аудит зачем он нужен и как его правильно провести</a>
+      </li>
+      <li>
+        <a href="https://practicum.yandex.ru/blog/chto-takoe-ux-ui-dizayn/" target="_blank">Что такое UI- и UX-дизайн, чем они отличаются</a>
+      </li>
+      <li>
+        <a href="https://practicum.yandex.ru/blog/chto-takoe-dizayn-myshlenie/" target="_blank">Дизайн-мышление</a>
+      </li>
+    </ol>
+  </section>
+
+  <section class="slide">
+    <h2>Материалы и ссылки ч.4/5</h2>
+    <ol>
+      <li>
+        <a href="https://www.uprock.ru/articles/psihologiya-dizayna-chast-1-kognitivnye-iskazheniya-o-kotoryh-dolzhen-znat-kazhdyy-dizayner" target="_blank">Психология дизайна — часть 1</a>
+      </li>
+      <li>
+        <a href="https://www.uprock.ru/articles/psihologiya-dizayna-chast-2-zakony-ux-kotorye-opredelyayut-povedenie-polzovateley" target="_blank">Психология дизайна — часть 2</a>
+      </li>
+      <li>
+        <a href="https://www.uprock.ru/articles/psihologiya-dizayna-chast-3-sensornyy-dizayn-vozdeystvuem-na-organy-chuvstv" target="_blank">Психология дизайна — часть 3</a>
+      </li>
+      <li>
+        <a href="https://ux-journal.ru/osnovy-dostupnosti-accessibility-dizajna.html" target="_blank">Основы доступности для веб-дизайнеров</a>
+      </li>
+      <li>
+        <a href="https://www.w3.org/TR/WCAG20/" target="_blank">Руководство по обеспечению доступности веб-контента (WCAG) 2.0</a>
+      </li>
+      <li>
+        <a href="https://24ways.org/2013/why-bother-with-accessibility/" target="_blank">Why Bother with Accessibility?</a>
+      </li>
+      <li>
+        <a href="https://www.uplab.ru/blog/usability-audit-of-the-website/" target="_blank">Юзабилити-аудит сайта</a>
+      </li>
+    </ol>
+  </section>
+
+  <section class="slide">
+    <h2>Материалы и ссылки ч.5/5</h2>
+    <ol>
+      <li>
+        <a href="https://validator.w3.org/nu/" target="_blank">Валидатор W3C</a>
+      </li>
+      <li>
+        <a href="https://www.artlebedev.ru/typograf/" target="_blank">Типограф</a>
+      </li>
+      <li>
+        <a href="http://yoksel.github.io/html-tree/" target="_blank">Генератор HTML-дерева</a>
       </li>
     </ol>
   </section>
