--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   </style>
 </head>
 
-<body class="shower full">
+<!-- <body class="shower full"> -->
+<body class="shower">
   <header class="caption">
     <h1>Веб-разработка</h1>
     <p>Лекция 8: СЕО и оптимизация</p>
@@ -44,66 +45,156 @@
   <section class="slide">
     <h2>SEO</h2>
     <p><b>SEO</b> (<mark>search engine</mark> optimization) — это оптимизация сайта под поисковики, которая помогает вывести его на первые позиции при поиске</p>
+    <figure>
+      <img src="img/seo-1.jpg" width="100%" height="100%" alt="" style="
+      max-height: 250px;
+      margin: 0 auto;
+      display: flex;
+      object-fit: contain;
+    ">
+    </figure>
   </section>
 
   <section class="slide">
     <h2>Контекстная реклама</h2>
     <p><b>Контекстная реклама</b> — это настройка рекламных объявлений, занимающих определенное место в поисковой выдаче</p>
+    <figure>
+      <img src="img/seo-2.jpg" width="100%" height="100%" alt="" style="
+      max-height: 250px;
+      margin: 0 auto;
+      display: flex;
+      object-fit: contain;
+    ">
+    </figure>
   </section>
 
   <section class="slide">
     <h2>Продвижение в социальных сетях</h2>
     <p><b>SMM</b> — это продвижение в социальных сетях с целью увеличения числа подписчиков и повышения трафика на сайт</p>
+    <figure>
+      <img src="img/seo-3.jpg" width="100%" height="100%" alt="" style="
+      max-height: 250px;
+      margin: 0 auto;
+      display: flex;
+      object-fit: contain;
+    ">
+      <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by vectorjuice / Freepik</a></cite>
+    </figure>
   </section>
 
   <section class="slide">
     <h2>Таргетированная реклама</h2>
     <p><b>Таргетированная реклама</b> — это показ рекламных объявлений, нацеленный на определенную аудиторию</p>
+    <figure>
+      <img src="img/seo-4.jpg" width="100%" height="100%" alt="" style="
+      max-height: 250px;
+      margin: 0 auto;
+      display: flex;
+      object-fit: contain;
+    ">
+      <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by vectorjuice / Freepik</a></cite>
+    </figure>
   </section>
 
   <section class="slide">
     <h2>Реклама в группах и в сообществах</h2>
     <p>Создание постов с рекламным содержимым</p>
+    <figure>
+      <img src="img/seo-5.jpg" width="100%" height="100%" alt="" style="
+      max-height: 250px;
+      margin: 0 auto;
+      display: flex;
+      object-fit: contain;
+    ">
+      <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by vectorjuice / Freepik</a></cite>
+    </figure>
   </section>
 
   <section class="slide">
     <h2>Работа с блогерами</h2>
     <p>Привлечение блогеров для рекламы в тематических пабликах и сообществах</p>
+    <figure>
+      <img src="img/seo-6.jpg" width="100%" height="100%" alt="" style="
+      max-height: 250px;
+      margin: 0 auto;
+      display: flex;
+      object-fit: contain;
+    ">
+      <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by pikisuperstar / Freepik</a></cite>
+    </figure>
   </section>
 
   <section class="slide">
     <h2>Медийная реклама</h2>
     <p>Используются:</p>
-    <ul>
-      <li>видеоролики</li>
-      <li>картинки и фотографии</li>
-      <li>звук</li>
-      <li>брендирование</li>
-    </ul>
+    <div class="columns two">
+      <ul>
+        <li>видеоролики</li>
+        <li>картинки и фотографии</li>
+        <li>звук</li>
+        <li>брендирование</li>
+      </ul>
+      <figure>
+        <img src="img/seo-7.jpg" width="100%" height="100%" alt="" style="
+        max-height: 250px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+        <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by vectorjuice / Freepik</a></cite>
+      </figure>
+    </div>
   </section>
 
   <section class="slide">
     <h2>Реклама на внешних ресурсах</h2>
     <p>Предполагает публикации на различных тематических площадках, информационных и новостных ресурсах, на страницах СМИ и т.д</p>
+    <figure>
+      <img src="img/seo-8.webp" width="100%" height="100%" alt="" style="
+      max-height: 250px;
+      margin: 0 auto;
+      display: flex;
+      object-fit: contain;
+    ">
+    </figure>
   </section>
 
   <section class="slide">
     <h2>E-mail маркетинг</h2>
     <p>Рассылка электронных писем по базе подписчиков с информацией о различных акция, новинках</p>
+    <figure>
+      <img src="img/seo-9.webp" width="100%" height="100%" alt="" style="
+      max-height: 250px;
+      margin: 0 auto;
+      display: flex;
+      object-fit: contain;
+    ">
+    </figure>
   </section>
 
   <!-- TODO Оценка результатов SEO -->
   <section class="slide">
     <h2>Оценка результатов SEO</h2>
-    <ol>
-      <li><b>небрендовый трафик</b></li>
-      <li><b>лиды с SEO</b></li>
-      <li><b>продажи с «SEO»</b></li>
-      <li>процент конверсии</li>
-      <li>цена лида</li>
-      <li>процент фраз в Топ-10</li>
-      <li>поведенческие факторы</li>
-    </ol>
+    <div class="columns two">
+      <ol>
+        <li><b>небрендовый трафик</b></li>
+        <li><b>лиды с SEO</b></li>
+        <li><b>продажи с «SEO»</b></li>
+        <li>процент конверсии</li>
+        <li>цена лида</li>
+        <li>процент фраз в Топ-10</li>
+        <li>поведенческие факторы</li>
+      </ol>
+      <figure>
+        <img src="img/seo-7.jpg" width="100%" height="100%" alt="" style="
+        max-height: 250px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+        <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by vectorjuice / Freepik</a></cite>
+      </figure>
+    </div>
   </section>
 
   <!-- TODO Поисковые системы -->
